Use react component for message form.

--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -4,7 +4,4 @@
   <%= render @messages %>
 </div>
 
-<form>
-  <label>Say something:</label><br>
-  <input type="text" data-behavior="room_speaker">
-</form>
+<%= react_component('MessageForm') %>
