Add message list and chat room react components.

--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -1,7 +1,3 @@
 <h1>Chat room</h1>
 
-<div id="messages">
-  <%= render @messages %>
-</div>
-
-<%= react_component('MessageForm') %>
+<%= react_component('ChatRoom', {messages: @messages}) %>
