--- a/app/assets/stylesheets/rooms.scss
+++ b/app/assets/stylesheets/rooms.scss
@@ -1,3 +1,13 @@
 // Place all the styles related to the rooms controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.navbar-header img {
+  height: 39px;
+  margin: 5px;
+}
+
+.fixed-height {
+  height: 250px;
+  overflow-y: scroll;
+}
