--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,20 @@
   </head>
 
   <body>
-    <%= yield %>
+    <nav>
+    </nav>
+    <nav class="navbar navbar-default">
+      <div class="container-fluid">
+        <div class="navbar-header">
+          <div class="pull-left">
+            <%= image_tag("logo.svg", alt: "Chatty") %>
+          </div>
+          <%= link_to "ChattyChat", root_url, class: "navbar-brand" %>
+        </div>
+      </div>
+    </nav>
+    <div class="container">
+      <%= yield %>
+    </div>
   </body>
 </html>
